# ProjektSI-2025-26

./: .gitignore  RAPORT_PROJEKTU.md  README.md  main.py  predictor.py  pyproject.toml  requirements.txt  strategy.py
examples/: QQQ_example.html
