[project]
name = "projekt-si"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "backtesting>=0.6.5",
    "bokeh>=3.8.1",
    "click>=8.3.1",
    "einops==0.8.1",
    "huggingface-hub>=0.33.1",
    "matplotlib>=3.9.3",
    "numpy>=2.4.0",
    "pandas>=2.2.2",
    "safetensors==0.6.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "torch>=2.9.1",
    "tqdm==4.67.1",
    "transformers>=4.53.3",
    "yfinance>=1.0",
]
